--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,6 @@
     "multer": "^1.3.0",
     "multer-gcs": "^1.0.2",
     "nodemon": "^1.11.0",
-    "serve-favicon": "~2.4.2",
-    "vue-upload-component": "^2.4.0-beta.11"
+    "serve-favicon": "~2.4.2"
   }
 }
