--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^1.2.1",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.17.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.4.3",
     "live-server": "^1.2.0",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.9",
